Editor: fixing TinyMCE 4.6.3 `lightgray` import
Why? TinyMCE 4.6.3 changed `line-height` from `inherit` to `1.2`,
breaking Calypso line height. This overrides the change in the Calypso
include.

--- a/client/components/tinymce/iframe.scss
+++ b/client/components/tinymce/iframe.scss
@@ -10,6 +10,11 @@ body {
 p {
 	margin: 0 0 24px 0;
 
+	.mce-content-body & {
+		/* To override lightgray/content.min.css */
+		line-height: inherit;
+	}
+
 	&:last-child {
 		margin-bottom: 0;
 	}
