--- a/client/blocks/comment-detail/style.scss
+++ b/client/blocks/comment-detail/style.scss
@@ -352,8 +352,7 @@ a.comment-detail__author-more-element {
 .comment-detail__placeholder {
 	@include placeholder();
 
-	span,
-	strong,
+	.comment-detail__author-avatar-image,
 	.comment-detail__comment-preview {
 		color: transparent;
 		background-color: lighten( $gray, 30% );
