--- a/client/blocks/comment-detail/style.scss
+++ b/client/blocks/comment-detail/style.scss
@@ -20,20 +20,22 @@
 
 .comment-detail__transition-enter {
 	opacity: 0.01;
-
-	&.comment-detail__transition-enter-active {
-		opacity: 1;
-		transition: opacity .15s linear;
-	}
+	visibility: hidden;
 }
-
+.comment-detail__transition-enter-active {
+	opacity: 1;
+	visibility: visible;
+	transition: all .15s linear;
+	transition-delay: .15s;
+}
 .comment-detail__transition-leave {
 	opacity: 1;
-
-	&.comment-detail__transition-leave-active {
-		opacity: 0.01;
-		transition: opacity .15s linear;
-	}
+	visibility: visible;
+}
+.comment-detail__transition-leave-active {
+	opacity: 0.01;
+	visibility: hidden;
+	transition: all .15s linear;
 }
 
 .comment-detail__author-avatar {
@@ -338,13 +340,42 @@ a.comment-detail__author-more-element {
 	fill: $alert-red;
 }
 
-
 .comment-detail__reply {
 	line-height: 0;
 
 	textarea {
 		border: none;
 		resize: vertical;
+	}
+}
+
+.comment-detail__placeholder {
+	@include placeholder();
+
+	.comment-detail__author-avatar-image,
+	.comment-detail__comment-preview {
+		color: transparent;
+		background-color: lighten( $gray, 30% );
+		animation: loading-fade 1.6s ease-in-out infinite;
+	}
+
+	&.is-expanded .comment-detail__header {
+		border: none;
+	}
+
+	.comment-detail__author-avatar-image {
+		display: inline-block;
+		height: 100%;
+		width: 100%;
+	}
+
+	.comment-detail__author-info {
+		text-overflow: initial;
+	}
+
+	.comment-detail__comment-preview {
+		margin: 0 8px;
+		width: 100%;
 	}
 }
 
