--- a/client/my-sites/site-indicator/style.scss
+++ b/client/my-sites/site-indicator/style.scss
@@ -2,9 +2,13 @@
  * Site Indicator
  */
 
-.site-indicator {
+.site-indicator__main {
 	align-self: center;
 	margin-right: 16px;
+}
+
+.site-indicator__wrapper {
+	align-self: center;
 }
 
 .site-indicator__button {
@@ -107,7 +111,8 @@
 
 	// Links within the action message
 	a,
-	.button.is-link {
+	.button.is-borderless.is-scary,
+	.site-indicator__action-button {
 		border-bottom: 1px solid rgba( 255, 255, 255, 0.6 );
 		color: $white;
 		text-decoration: none;
