--- a/client/extensions/woocommerce/components/compact-tinymce/style.scss
+++ b/client/extensions/woocommerce/components/compact-tinymce/style.scss
@@ -1,6 +1,6 @@
 .compact-tinymce {
 	.mce-toolbar .mce-btn-group .mce-btn.mce-listbox:hover {
-		border-left-color: lighten( $gray, 20% );
+		border-left-color: transparent;
 		border-right-color: lighten( $gray, 20% );
 	}
 
@@ -11,15 +11,11 @@
 		padding-left: 8px;
 	}
 
-	.mce-tinymce .mce-stack-layout-item.mce-last {
-		border-top: 1px solid lighten( $gray, 20% );
-	}
-
 	div.mce-toolbar-grp {
 		background-color: rgba( $white, 0.92 );
 		border-color: lighten( $gray, 20% );
 		border-style: solid;
-		border-right-width: 1px;
+		border-width: 1px;
 		padding: 0;
 		overflow-x: auto;
 		margin: 0 auto;
@@ -29,9 +25,30 @@
 		margin: 0 2px 0 0;
 		padding: 0 8px;
 		vertical-align: top;
-		border-left: 1px solid lighten( $gray, 20% );
 		border-right: 1px solid lighten( $gray, 20% );
 		height: 36px;
+
+		@include breakpoint( "<660px" ) {
+			height: 44px;
+		}
+	}
+
+	.mce-tinymce .mce-stack-layout-item.mce-last {
+		border-top-width: 0px;
+	}
+
+	.mce-container.mce-tinymce {
+		& > .mce-container-body {
+			&:after {
+				@include breakpoint( "<660px" ) {
+					@include long-content-fade( $size: 0px );
+				}
+
+				@include breakpoint( "660px-960px" ) {
+					@include long-content-fade( $size: 0px );
+				}
+			}
+		}
 	}
 
 	.mce-toolbar .mce-btn-group .mce-btn:hover,
