--- a/assets/stylesheets/_components.scss
+++ b/assets/stylesheets/_components.scss
@@ -205,6 +205,7 @@
 @import 'components/vertical-nav/item/style';
 @import 'components/vertical-menu/style';
 @import 'components/web-preview/style';
+@import 'components/wizard-bar/style';
 @import 'blocks/credit-card-form/style';
 @import 'devdocs/docs-example/style';
 @import 'devdocs/docs-selectors/style';
