--- a/client/signup/flow-progress-indicator/style.scss
+++ b/client/signup/flow-progress-indicator/style.scss
@@ -1,11 +1,19 @@
 .flow-progress-indicator {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+
 	color: darken( $gray, 20 );
 	font-size: 14px;
 	font-weight: 300;
 	margin-bottom: -10px;
 	text-align: center;
 
-	@include breakpoint( "<660px" ) {
+	@include breakpoint( '<660px' ) {
 		padding-top: 10px;
 	}
+}
+
+.flow-progress-indicator__wizard-bar {
+	width: 20%;
 }
