--- a/client/blocks/eligibility-warnings/style.scss
+++ b/client/blocks/eligibility-warnings/style.scss
@@ -4,24 +4,75 @@
 	padding: 32px 24px;
 	overflow-wrap: anywhere;
 	background: #fff;
-	margin-top: 16px;
 	font-size: $font-body-small;
+	margin: 0;
 	box-shadow: 0 0 0 1px var(--color-border-subtle);
-	padding-top: 2em;
 
 	.eligibility-warnings__confirm-buttons {
 		display: flex;
 		justify-content: space-between;
+
+		@media ( max-width: 660px ) {
+			display: block;
+
+			.button {
+				width: 100%;
+				margin-top: 20px;
+			}
+		}
 	}
 
 	.support-block {
 		align-items: center;
 		display: flex;
 		gap: 5px;
+		color: var(--color-text-subtle);
+		font-size: 1rem;
 	}
 
 	.card {
 		box-shadow: none;
+
+		.notice {
+			margin-bottom: 0;
+		}
+	}
+
+	.eligibility-warnings__hold-list {
+		background: #fff;
+		border: 1px solid var(--studio-gray-5);
+		border-radius: 4px;
+		display: flex;
+		flex-direction: column;
+		align-items: flex-start;
+		padding: 26px 24px;
+		gap: 10px;
+
+		h1.card-heading.card-heading-20 {
+			font-size: unset;
+			font-weight: 600;
+			margin: unset;
+			color: unset;
+		}
+
+		.eligibility-warnings__hold {
+			padding: unset;
+			margin: unset;
+			width: 100%;
+		}
+
+		.eligibility-warnings__message {
+			padding: 16px 0;
+			margin: unset;
+			border-top: 1px solid var(--studio-gray-5);
+		}
+		.eligibility-warnings__message:last-of-type {
+			padding-bottom: 0;
+		}
+	}
+
+	&.eligibility-warnings--without-title {
+		padding-top: 3em;
 	}
 }
 
@@ -40,7 +91,9 @@
 }
 
 .eligibility-warnings__primary-text {
-	margin-top: 8px;
+	color: var(--color-text-subtle);
+	font-size: 1rem;
+	margin-top: 16px;
 }
 
 .eligibility-warnings--with-indent {
@@ -84,7 +137,6 @@
 	display: flex;
 	flex-direction: row;
 	align-items: flex-start;
-	margin-bottom: 16px;
 }
 
 .eligibility-warnings__hold .gridicon,
@@ -104,6 +156,7 @@
 	flex-grow: 1;
 	line-height: 24px;
 	padding: 0;
+	margin-bottom: 10px;
 
 	.eligibility-warnings__message-title {
 		font-weight: 600;
@@ -174,9 +227,22 @@
 .eligibility-warnings__warnings-card {
 	background: #f6f7f7;
 	margin: 0 24px;
+
+	@media ( max-width: 480px ) {
+		margin: 0 16px;
+	}
+
+	.eligibility-warnings__message {
+		border-bottom: 1px solid var(--color-border-subtle);
+		padding-bottom: 10px;
+	}
 }
 
 .eligibility-warnings__warning:last-child {
 	margin-bottom: 0;
 	border-bottom: none;
+
+	.eligibility-warnings__message {
+		border-bottom: none;
+	}
 }
