--- a/client/my-sites/plan-features/style.scss
+++ b/client/my-sites/plan-features/style.scss
@@ -121,6 +121,11 @@ $plan-features-sidebar-width: 272px;
 .plan-features__content {
 	margin: -16px -16px 0;
 	padding-top: $plan-features-header-banner-height;
+
+	.plans-features-main__group.is-scrollable & {
+		margin-left: 0;
+		margin-right: 0;
+	}
 }
 
 .is-section-plans .plan-features__mobile {
@@ -675,10 +680,6 @@ $plan-features-sidebar-width: 272px;
 /*= Plans in Signup
 ========================================*/
 
-.plans-features-main__group.is-wpcom {
-	padding-top: 19px;
-}
-
 // This is the customer type buttons that let
 // you toggle the visible plans in signup.
 // The #primary id is included to increase specificity
@@ -746,6 +747,10 @@ body.is-section-signup #primary .segmented-control.is-customer-type-toggle {
 		@include breakpoint-deprecated( ">660px" ) {
 			max-width: 1100px;
 		}
+	}
+
+	.signup__steps .plans-features-main__group.is-scrollable & {
+		max-width: 100%;
 	}
 
 	.plan-features__table {
@@ -866,49 +871,6 @@ body.is-section-signup #primary .segmented-control.is-customer-type-toggle {
 
 	.plan-features__header-price-group-prices {
 		display: inline-block;
-	}
-}
-
-.plans-features-main__group.is-scrollable {
-	position: relative;
-
-	.is-section-signup & {
-		width: 100vw;
-		margin-left: calc(50% - 50vw);
-
-		@media ( min-width: 1600px ) {
-			max-width: 1600px;
-			margin-left: -280px;
-		}
-
-		@include breakpoint-deprecated( "<1040px" ) {
-			padding-top: 12px;
-		}
-	}
-
-	.is-section-plans & {
-		overflow: hidden;
-		width: calc(100vw - 278px);
-		margin-left: calc(50% - 50vw + 138px);
-
-		@include breakpoint-deprecated( "<660px" ) {
-			margin-left: 0;
-			width: 100%;
-		}
-
-		@media ( min-width: 1800px ) {
-			max-width: 1520px;
-			margin-left: -240px;
-		}
-	}
-
-	.signup__steps & .plan-features--signup {
-		max-width: 100%;
-	}
-
-	.plan-features__content {
-		margin-left: 0;
-		margin-right: 0;
 	}
 }
 
@@ -1224,6 +1186,7 @@ button.plan-features__scroll-button {
 	}
 }
 
+/* stylelint-disable-next-line no-duplicate-selectors */
 .plans-wrapper {
 	.plan-features__item-annual-plan {
 		font-size: 0.6rem; /* stylelint-disable-line scales/font-sizes */
