--- a/client/my-sites/plans-features-main/style.scss
+++ b/client/my-sites/plans-features-main/style.scss
@@ -12,6 +12,47 @@
 	}
 }
 
+
+.plans-features-main__group.is-scrollable {
+	position: relative;
+
+	.is-section-signup & {
+		--approximate-viewport-scrollbar-width: 20px;
+
+		width: calc(100vw - var(--approximate-viewport-scrollbar-width));
+		margin-left: calc(50% - 50vw + var(--approximate-viewport-scrollbar-width) / 2);
+
+		@media ( min-width: 1600px ) {
+			max-width: 1600px;
+			margin-left: -280px;
+		}
+
+		@include breakpoint-deprecated( "<1040px" ) {
+			padding-top: 12px;
+		}
+	}
+
+	.is-section-plans & {
+		overflow: hidden;
+		width: calc(100vw - 278px);
+		margin-left: calc(50% - 50vw + 138px);
+
+		@include breakpoint-deprecated( "<660px" ) {
+			margin-left: 0;
+			width: 100%;
+		}
+
+		@media ( min-width: 1800px ) {
+			max-width: 1520px;
+			margin-left: -240px;
+		}
+	}
+}
+
+.plans-features-main__group.is-wpcom {
+	padding-top: 19px;
+}
+
 // Required additional specificity
 .plans-features-main .plans-features-main__happychat-button {
 	color: var(--color-primary);
