--- a/client/my-sites/stats/stats-module/style.scss
+++ b/client/my-sites/stats/stats-module/style.scss
@@ -590,7 +590,7 @@ ul.module-header-actions {
 .stats-module--unified {
 	.card {
 		&:first-child {
-			border-radius: 4px 4px 0 0;
+			border-radius: 5px 5px 0 0; /* stylelint-disable-line scales/radii */
 			box-shadow: none;
 			border: 1px solid var(--studio-gray-5);
 			border-bottom: 0;
@@ -599,14 +599,14 @@ ul.module-header-actions {
 		}
 
 		&:last-child {
-			border-radius: 0 0 4px 4px;
+			border-radius: 0 0 5px 5px; /* stylelint-disable-line scales/radii */
 			box-shadow: none;
 			border: 1px solid var(--studio-gray-5);
 			border-top: 0;
 		}
 
 		&:first-child:last-child {
-			border-radius: 4px;
+			border-radius: 5px; /* stylelint-disable-line scales/radii */
 		}
 	}
 
@@ -640,6 +640,11 @@ ul.module-header-actions {
 
 	.module-content-list-legend {
 		padding: 0;
+
+		.module-content-list-item-label,
+		.module-content-list-item-value {
+			color: var(--studio-gray-100);
+		}
 	}
 
 	.module-content-list {
@@ -662,5 +667,11 @@ ul.module-header-actions {
 			padding-top: 4px;
 			padding-bottom: 4px;
 		}
+	}
+}
+
+.stats-content-promo {
+	.promo-card-block {
+		border-radius: 5px; /* stylelint-disable-line scales/radii */
 	}
 }
