--- a/client/my-sites/customer-home/style.scss
+++ b/client/my-sites/customer-home/style.scss
@@ -256,7 +256,7 @@ body.is-section-home.theme-default.color-scheme {
 	// edges of the space with it's inner list.
 	.card,
 	.task {
-		margin: 32px;
+		margin: 0 32px 32px;
 	}
 
 	// Extend the checklist to the edge of the primary content area
@@ -301,7 +301,7 @@ body.is-section-home.theme-default.color-scheme {
 
 		// 32px spacing for everything except the space before the CTA (48px)
 		.task__text {
-			gap: 32px;
+			gap: 16px;
 
 			& > * {
 				margin-top: 0;
