--- a/client/site-profiler/components/styles.scss
+++ b/client/site-profiler/components/styles.scss
@@ -71,9 +71,10 @@ html[dir="rtl"] {
 		}
 	}
 
+	// Button style overrides necessary because of conflicting WPcom styles.
 	.button-action {
 		color: #fff;
-		background: var(--wp-admin-theme-color);
+		background: var(--color-accent);
 		border-radius: 4px;
 		font-size: 1rem;
 		font-weight: 500;
@@ -85,7 +86,7 @@ html[dir="rtl"] {
 		}
 
 		&.is-busy {
-			background-image: linear-gradient(-45deg, var(--wp-admin-theme-color) 33%, var(--wp-admin-theme-color-darker-20) 33%, var(--wp-admin-theme-color-darker-20) 70%, var(--wp-admin-theme-color) 70%);
+			background-image: linear-gradient(-45deg, var(--color-accent) 28%, var(--color-accent-60) 28%, var(--color-accent-60) 72%, var(--color-accent) 72%);
 		}
 	}
 
