--- a/client/jetpack-cloud/sections/partner-portal/license-lightbox/style.scss
+++ b/client/jetpack-cloud/sections/partner-portal/license-lightbox/style.scss
@@ -44,8 +44,7 @@
 	}
 }
 
-.review-licenses__notice,
-.license-lightbox__secondary-checkout-notice {
+.review-licenses__notice {
 	color: var(--studio-gray-50);
 	font-size: rem(12px);
 	margin-block-end: 16px;
@@ -55,18 +54,4 @@
 		text-decoration: underline;
 		color: var(--studio-black);
 	}
-}
-
-.license-lightbox__secondary-content-button {
-	border: 2px solid var(--color-accent);
-	font-weight: 700;
-	font-size: 1rem;
-	margin-block-start: 1rem;
-	margin-block-end: 0;
-	width: 100%;
-	padding: 10px 16px;
-}
-
-.license-lightbox__secondary-checkout-heading {
-	font-weight: 700;
 }
