--- a/apps/notifications/src/index.ejs
+++ b/apps/notifications/src/index.ejs
@@ -7,8 +7,8 @@
 	<title>Notifications</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 	<meta name="mobile-web-app-capable" content="yes">
-	<meta name="node-platform" content="<%= htmlWebpackPlugin.options.nodeVersion %>">
-	<meta name="node-version" content="<%= htmlWebpackPlugin.options.nodePlatform %>">
+	<meta name="node-platform" content="<%= htmlWebpackPlugin.options.nodePlatform %>">
+	<meta name="node-version" content="<%= htmlWebpackPlugin.options.nodeVersion %>">
 	<meta name="git-describe" content="<%= htmlWebpackPlugin.options.gitDescribe %>">
     <% htmlWebpackPlugin.files.css.forEach( function( style ) { if ( style.includes( 'rtl' ) && htmlWebpackPlugin.options.isRTL ) { %><link rel="stylesheet" href="<%= style %>"><% } else if ( ! ( style.includes( 'rtl' ) || htmlWebpackPlugin.options.isRTL ) ) { %><link rel="stylesheet" href="<%= style %>"><% } } ) %>
 </head>
