--- a/client/jetpack-cloud/sections/partner-portal/single-site-upsell-lightbox/style.scss
+++ b/client/jetpack-cloud/sections/partner-portal/single-site-upsell-lightbox/style.scss
@@ -1,4 +1,4 @@
-.license-lightbox__secondary-content-button {
+.button.license-lightbox__secondary-content-button {
 	border: 2px solid var(--color-accent);
 	font-weight: 700;
 	font-size: 1rem;
