Consistent heading font color, size, and weight

--- a/client/jetpack-cloud/sections/partner-portal/license-lightbox/style.scss
+++ b/client/jetpack-cloud/sections/partner-portal/license-lightbox/style.scss
@@ -6,7 +6,9 @@
 }
 
 .license-lightbox__jetpack-manage-license-title {
+	color: var(--studio-black);
 	font-size: 1rem;
+	font-weight: 700;
 	margin-block-end: 8px;
 }
 
