--- a/client/jetpack-cloud/sections/partner-portal/single-site-upsell-lightbox/style.scss
+++ b/client/jetpack-cloud/sections/partner-portal/single-site-upsell-lightbox/style.scss
@@ -2,7 +2,6 @@
 	border: 2px solid var(--color-accent);
 	font-weight: 700;
 	font-size: 1rem;
-	margin-block-start: 1rem;
 	margin-block-end: 0;
 	width: 100%;
 	padding: 10px 16px;
@@ -12,4 +11,5 @@
 	color: var(--studio-black);
 	font-size: 1rem;
 	font-weight: 700;
+	margin-block-end: 8px;
 }
