--- a/client/jetpack-cloud/sections/partner-portal/primary/payment-method-add/style.scss
+++ b/client/jetpack-cloud/sections/partner-portal/primary/payment-method-add/style.scss
@@ -70,10 +70,8 @@
 			padding: 0;
 		}
 
-		button {
-			&.checkout-button {
-				border-radius: var(--jetpack-corners-soft);
-			}
+		.checkout-submit-button button {
+			border-radius: var(--jetpack-corners-soft);
 		}
 	}
 
