Add "My Themes" and "All themes" to Woo Express paid plans

--- a/client/my-sites/themes/theme-showcase.scss
+++ b/client/my-sites/themes/theme-showcase.scss
@@ -470,6 +470,12 @@
 	height: 40px;
 	justify-content: space-between;
 	margin: 8px 0;
+
+	&.is-woo-express {
+		.responsive-toolbar-group__grouped-list {
+			justify-content: flex-start;
+		}
+	}
 }
 
 .theme-showcase__all-themes-title {
