Fix eslint job issues: 1. Handle error condition when only sass files exist 2. Parallelize to improve performance 3. TBD: handle multiple small result files.

--- a/client/my-sites/earn/style.scss
+++ b/client/my-sites/earn/style.scss
@@ -5,7 +5,7 @@
 #earn-navigation {
 	margin-bottom: 30px;
 }
-
+// test .scss change
 // Small override for card component headers
 .is-section-earn .section-header__label {
 	font-weight: 600;
