Add `gap` so there's spacing between badges when there's more than one
Happens on the `natural-block` theme, for example, which is a partner theme

--- a/client/landing/stepper/declarative-flow/internals/steps-repository/design-setup/style.scss
+++ b/client/landing/stepper/declarative-flow/internals/steps-repository/design-setup/style.scss
@@ -582,6 +582,8 @@ $design-button-primary-color: rgb(17, 122, 201);
 		}
 
 		.design-picker-design-title__theme-tier-badge {
+			gap: 8px;
+
 			&:empty {
 				display: none;
 			}
